ros2_ws/log/build_2025-03-15_14-04-56/lane_angle/stderr.log
  File "/home/crofi/ros2_ws/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py", line 61
    else return deviation
         ^^^^^^
SyntaxError: expected ':'

